<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.DogColors">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <CheckBox
                android:id="@+id/CB_pet_color_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:buttonTint="@color/white"
                android:hint="@string/pet_color_white" />

            <CheckBox
                android:id="@+id/CB_pet_color_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:buttonTint="@color/black"
                android:hint="@string/pet_color_black" />

            <CheckBox
                android:id="@+id/CB_pet_color_brown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:buttonTint="#654321"
                android:hint="@string/pet_color_brown" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <CheckBox
                android:id="@+id/CB_pet_color_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:buttonTint="#8A8A8A"
                android:hint="@string/pet_color_gray" />

            <CheckBox
                android:id="@+id/CB_pet_color_golden"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:buttonTint="#B1BD48"
                android:hint="@string/pet_color_golden" />

            <CheckBox
                android:id="@+id/CB_pet_color_light_brown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:buttonTint="#b99c80"
                android:hint="@string/pet_color_light_brown" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/CB_pet_color_dark_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:buttonTint="#585858"
                android:hint="@string/pet_color_dark_gray" />

            <CheckBox
                android:id="@+id/CB_pet_color_ginger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:buttonTint="#b06500"
                android:hint="@string/pet_color_ginger" />


            <CheckBox
                android:id="@+id/CB_pet_color_light_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:buttonTint="#C8C8C8"
                android:hint="@string/pet_color_light_gray" />


        </LinearLayout>


    </LinearLayout>


</FrameLayout>